--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -146,7 +146,7 @@
 .findly-dashboard{
     height: 100%;
     padding: 0 100px;
-    background-color: #f3f3f4;
+    background-color: #ffffff;
     .main-heading{
         text-align: center;
         font-size: 20px;
