--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -21,8 +21,9 @@
             </div>
       </div>
     </div>
+    </div>
     <ng-container >
-        <perfect-scrollbar class="table-scroll-perfect list">
+        <perfect-scrollbar class="table-scroll-perfect-bot list">
           <div class="list-view-data">
             <div class="row row_list">
               <div class="box-content" *ngFor="let source of bots"
@@ -43,8 +44,7 @@
               </div>
             </div>
           </div>
+          
         </perfect-scrollbar>
       </ng-container>
-  </div>
-  
  </div> 
