--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -7,7 +7,7 @@
 .findlyHeader{
    box-shadow: 0px 1px 5px rgba(32, 33, 36, 0.2);;
    background: $whiteColor;
-   padding: 12px 20px;
+   padding: 0 20px;
    z-index: 100 !important;
    .logoKoreIcon{
      outline: none;
@@ -21,6 +21,31 @@
      padding-left: 0 !important;
    }
     .container-fluid{
+      .logoTabsContainer{
+        display: flex;
+        .headerTabsContainer{
+          padding-left: 120px;
+          .headerMenuTab{
+            text-transform: uppercase;
+            color: #202124;
+            border-bottom: 1px solid #fff;
+            line-height: 58px;
+            float: left;
+            margin-right: 20px;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 12px;
+            padding: 0 5px;
+            outline: none;
+            &.active{
+              border-bottom: 2px solid #0D6EFD;
+            }
+            &:hover{
+              border-bottom: 2px solid #0D6EFD;
+            }
+          }
+        }
+      }
       .homePageTitle{
         position: absolute;
         left: 14%;
@@ -41,6 +66,8 @@
           }
         }
       }
+
+
       .nav-flex-icons{
         .headerIcons{
           .mat-button-focus-overlay{
