--- a/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
@@ -7029,8 +7029,12 @@ body, html{
 .search-container.conversation #searchChatContainer.bgfocus{   
     background: rgba(32, 33, 36, 0.1);
     border-radius: 0;
-    opacity: 0.5;
+    opacity: 0;
 }
+.search-container.conversation #searchChatContainer.bgfocus-override{   
+    opacity: 1 !important;
+}
+
 .search-container.conversation #searchChatContainer .messageBubble{
     position: relative;    
 }
