build blocker fix

--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -7,7 +7,7 @@
                     <span *ngIf="pagetitle !== undefined" class="currentTitle">{{pagetitle}}</span>
                 </div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab active" [routerLink]="['/summary']" (click)="preview('Summary')" skipLocationChange routerLinkActive="active">Summary</div>
+                    <div class="headerMenuTab active" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active">Summary</div>
                     <div class="headerMenuTab">Indices</div>
                     <div class="headerMenuTab">Analytics</div>
                     <div class="headerMenuTab">Settings</div>
