--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -11,8 +11,8 @@
 			<div class="dropdown dropdown-open">
 				<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>Default</button>                                            
 				<ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-					<li  (click)="selectResourceDrop.close();selectResourceFilter()"><span class="list-name">Default</span></li>
-					<li  (click)="selectResourceDrop.close();selectResourceFilter()"><span class="list-name">Create new</span></li>
+					<li><span class="list-name">Default</span></li>
+					<li><span class="list-name">Create new</span></li>
 				
 				</ul>
 			</div>
